finished self-profile page

--- a/src/html/signup-login-page.html
+++ b/src/html/signup-login-page.html
@@ -13,7 +13,7 @@
       <h2>Minder - Find a Mentor!</h2>
     </div>
     <div class="center-content">
-      <form>
+      <div>
         <div>
           <label>Email</label>
           <input></input>
@@ -23,13 +23,12 @@
           <input></input>
         </div>
         <div class="center-content">
-          <button class="button-submit">Login</button>
+          <button id="login" class="button-submit">Login</button>
         </div>
       </div>
-      </form>
     </div>
     <div class="center-content">
-      <form>
+      <div>
         <div>
           <label>Email</label>
           <input></input>
@@ -43,9 +42,12 @@
           <input></input>
         </div>
         <div class="center-content">
-          <button class="button-submit">Sign Up</button>
+          <button id="signup" class="button-submit">Sign Up</button>
         </div>
-      </form>
+      </div>
     </div>
   </body>
+  <footer>
+    <script src="../scripts/signup-login-page.js"></script>
+  </footer>
 </html>
