--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/self-profile.css">
+    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
 
   </head>
 
@@ -16,7 +17,7 @@
         <h1>Elton Xue</h1>
       </div>
       <div class="center-content">
-        <div id="discover" class="button-discovery">Discover</div>
+        <div id="discover" class="button-submit">Discover</div>
       </div>
       <div
       <div class="center-content">
