--- a/src/html/discovery.html
+++ b/src/html/discovery.html
@@ -7,10 +7,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/discovery.css">
-
+    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
   </head>
   <body>
+    <div class="center-content">
+      <h2 id="title-header">Discover</h2>
+    </div>
+    <div class="center-content">
+      <input id="search-bar"></input>
+      <div id="search" class="button-submit">SEARCH</div>
+    </div>
+    <div class="center-content">
+      <div class="match-info">
+          <div class="center-content">
+            <h2>Locals</h2>
+          </div>
+          <div class="profile-list">
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
 
+        </div>
+      </div>
+      <div class="match-info">
+          <div class="center-content">
+            <h2>Similar Tags</h2>
+          </div>
+          <div class="profile-list">
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+
+        </div>
+      </div>
+      <div class="match-info">
+          <div class="center-content">
+            <h2>Random</h2>
+          </div>
+          <div class="profile-list">
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+            <div class="profile">
+              <image class="profile-image" src="../assets/profile-pic.jpg">
+              <p>Elton Xue</p>
+            </div>
+
+        </div>
+      </div>
+    </div>
   </body>
 
   <footer>
