--- a/src/html/signup-login-page.html
+++ b/src/html/signup-login-page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/signup-login-page.css">
+    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
   </head>
 
   <body>
