added user profiles

--- a/src/html/discovery.html
+++ b/src/html/discovery.html
@@ -10,106 +10,103 @@
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
   </head>
   <body>
-    <div class="center-content">
-      <h2 id="title-header">Discover</h2>
-    </div>
-    <div class="center-content">
+    <ul>
+      <li><a href="discovery.html">Discover</a></li>
+      <li><a href="self-profile.html">My Profile</a></li>
+      <li><a href="discovery.html">Notifications</a></li>
+      <li><a href="signup-login-page.html">Logout</a></li>
+    </ul>
+    <div id="title-header" class="center-content">
       <input id="search-bar"></input>
       <div id="search" class="button-submit">SEARCH</div>
     </div>
     <div class="center-content">
       <div class="match-info">
-          <div class="center-content">
             <h2>Locals</h2>
-          </div>
-          <div class="profile-list">
+          <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
 
         </div>
       </div>
       <div class="match-info">
-          <div class="center-content">
             <h2>Similar Tags</h2>
-          </div>
-          <div class="profile-list">
+          <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
 
         </div>
       </div>
       <div class="match-info">
-          <div class="center-content">
             <h2>Random</h2>
-          </div>
-          <div class="profile-list">
+          <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/profile-pic.jpg">
-              <p>Elton Xue</p>
+              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <p>Sonia Xu</p>
             </div>
 
         </div>
