--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -2,11 +2,137 @@
 
 <html>
   <head>
+    <title>Minder</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="../styles/profile.css">
+    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
 
   </head>
 
   <body>
-    <h1>USER PROFILE</h1>
+      <image class="profile-picture" src="../assets/user-profile-pic.jpg" />
+      <div class="center-content">
+        <h1>Sonia Xu</h1>
+      </div>
+      <div class="center-content">
+        <div id="connect" class="button-submit">Connect</div>
+      </div>
+      <div
+      <div class="center-content">
+        <div class="split-page">
+          <div class="info">
+            <h2>Description</h2>
+            <div>
+              <p>
+                Hiiiiiiiiiii!!! I'm Sonia and I'm a recent alumni from the University
+                of California, Irvine. Currently, I'm working for Ventura Foods Co.
+                located in Brea, CA as an Accounts Receivable Clerk. As you can probably
+                tell already, I'm very into numbers (and myself, I'd like to mention).
+                So if anyone needs mentoring with anything math/economics/accounting,
+                send me a invite! My rates are $100/hr because I'm expensive.
+              </p>
+            </div>
+          </div>
+          <div class="info">
+            <h2>Education</h2>
+            <div>
+              <h2>University of California, Irvine -> Graduated 2017</h2>
+              <p>Major: Economics</p>
+              <p>Minor: Accounting</p>
+              <p>GPA: 3.40</p>
+            </div>
+          </div>
+        </div>
+        <div class="center-content">
+          <div class="split-page">
+            <div class="info">
+              <h2>Tags</h2>
+              <span class="tag">Hiking</span>
+              <span class="tag">Texting</span>
+              <span class="tag">Lifting with bf</span>
+              <span class="tag">Mirrors</span>
+              <span class="tag">Basketball</span>
+              <span class="tag">Sleeping</span>
+              <span class="tag">Steak</span>
+
+            </div>
+            <div class="info">
+              <h2>Location</h2>
+              <p>Hometown located in La Habra, CA 90683</p>
+              <p>Lived in Irvine, CA 92612</p>
+              <p>Currently located in La Habra, CA 90683</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="center-content">
+        <div class="match-info info">
+            <h1>Connections</h1>
+            <div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+              <div class="profile">
+                <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                <p>Sonia Xu</p>
+              </div>
+          </div>
+        </div>
+        <div class="center-content">
+          <div class="match-info info">
+              <h1>Similar Profiles</h1>
+              <div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+                <div class="profile">
+                  <image class="profile-image" src="../assets/user-profile-pic.jpg">
+                  <p>Sonia Xu</p>
+                </div>
+            </div>
+          </div>
+
+
   </body>
+
+  <footer>
+    <script src="../scripts/user-profile.js"></script>
+  </footer>
 
 </html>
