added connect page and menu bar

--- a/src/html/connect.html
+++ b/src/html/connect.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
   </head>
   <body>
+    <ul>
+      <li><a class="button-submit" href="discovery.html">Discover</a></li>
+      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
+      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
+      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+    </ul>
     <div class="center-content">
       <div>
           <h2>Send a Message!</h2>
