--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -12,65 +12,69 @@
   </head>
 
   <body>
-      <image class="profile-picture" src="../assets/profile-pic.jpg" />
-      <div class="center-content">
-        <h1>Elton Xue</h1>
+    <ul>
+      <li><a class="button-submit" href="discovery.html">Discover</a></li>
+      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
+      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
+      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+    </ul>
+    <image class="profile-picture" src="../assets/profile-pic.jpg" />
+    <div class="center-content">
+      <h1>Elton Xue</h1>
+    </div>
+    <div class="center-content">
+      <div id="discover" class="button-submit">Discover</div>
+    </div>
+    <div
+    <div class="center-content">
+      <div class="split-page">
+        <div class="info">
+          <h2>Description</h2>
+          <div>
+            <p>
+              Hello, my name is Elton and I'm a recent graduate who's looking to
+              share my knowledge of programming. I mainly focus primarily on
+              full stack web development, but have dwelled into mobile development
+              a bit. My rates are $15/hr, which is a big steal compared to other
+              mentors in coding!
+            </p>
+          </div>
+        </div>
+        <div class="info">
+          <h2>Education</h2>
+          <div>
+            <h2>University of California, Irvine -> Expected 2019</h2>
+            <p>Major: Computer Science w/ a specialization in Networked Systems</p>
+            <p>Minor: Statistics</p>
+            <p>GPA: 3.50</p>
+          </div>
+        </div>
       </div>
-      <div class="center-content">
-        <div id="discover" class="button-submit">Discover</div>
-      </div>
-      <div
       <div class="center-content">
         <div class="split-page">
           <div class="info">
-            <h2>Description</h2>
-            <div>
-              <p>
-                Hello, my name is Elton and I'm a recent graduate who's looking to
-                share my knowledge of programming. I mainly focus primarily on
-                full stack web development, but have dwelled into mobile development
-                a bit. My rates are $15/hr, which is a big steal compared to other
-                mentors in coding!
-              </p>
-            </div>
+            <h2>Tags</h2>
+            <span class="tag">Basketball</span>
+            <span class="tag">Hiking</span>
+            <span class="tag">Coding</span>
+            <span class="tag">Computers</span>
+            <span class="tag">Cooking</span>
+            <span class="tag">Singing</span>
+            <span class="tag">Kungfu</span>
+            <span class="tag">Soccer</span>
+            <span class="tag">Ping Pong</span>
+            <span class="tag">Swimming</span>
+
           </div>
           <div class="info">
-            <h2>Education</h2>
-            <div>
-              <h2>University of California, Irvine -> Expected 2019</h2>
-              <p>Major: Computer Science w/ a specialization in Networked Systems</p>
-              <p>Minor: Statistics</p>
-              <p>GPA: 3.50</p>
-            </div>
-          </div>
-        </div>
-        <div class="center-content">
-          <div class="split-page">
-            <div class="info">
-              <h2>Tags</h2>
-              <span class="tag">Basketball</span>
-              <span class="tag">Hiking</span>
-              <span class="tag">Coding</span>
-              <span class="tag">Computers</span>
-              <span class="tag">Cooking</span>
-              <span class="tag">Singing</span>
-              <span class="tag">Kungfu</span>
-              <span class="tag">Soccer</span>
-              <span class="tag">Ping Pong</span>
-              <span class="tag">Swimming</span>
-
-            </div>
-            <div class="info">
-              <h2>Location</h2>
-              <p>Hometown located in Alhambra, CA 91803</p>
-              <p>Lived in Millbrae, CA 94030</p>
-              <p>Currently located in Irvine, CA 92612</p>
-            </div>
+            <h2>Location</h2>
+            <p>Hometown located in Alhambra, CA 91803</p>
+            <p>Lived in Millbrae, CA 94030</p>
+            <p>Currently located in Irvine, CA 92612</p>
           </div>
         </div>
       </div>
-
-
+    </div>
   </body>
 
   <footer>
