--- a/src/html/discovery.html
+++ b/src/html/discovery.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="discovery.html">Discover</a></li>
-      <li><a href="self-profile.html">My Profile</a></li>
-      <li><a href="discovery.html">Notifications</a></li>
-      <li><a href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery.html">Discover</a></li>
+      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
+      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
+      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
     <div id="title-header" class="center-content">
       <input id="search-bar"></input>
