added edit profile page

--- a/src/html/signup-login-page.html
+++ b/src/html/signup-login-page.html
@@ -21,7 +21,7 @@
         </div>
         <div>
           <label>Password</label>
-          <input></input>
+          <input type="password"></input>
         </div>
         <div class="center-content">
           <button id="login" class="button-submit">Login</button>
@@ -31,16 +31,20 @@
     <div class="center-content">
       <div>
         <div>
+          <label>Name</label>
+          <input></input>
+        </div>
+        <div>
           <label>Email</label>
           <input></input>
         </div>
         <div>
           <label>Password</label>
-          <input></input>
+          <input type="password"></input>
         </div>
         <div>
           <label>Confirm Password</label>
-          <input></input>
+          <input type="password"></input>
         </div>
         <div class="center-content">
           <button id="signup" class="button-submit">Sign Up</button>
