--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -24,8 +24,9 @@
     </div>
     <div class="center-content">
       <div id="discover" class="button-submit">Discover</div>
+      <div id="edit-profile" class="button-submit">Edit Profile</div>
     </div>
-    <div
+    <div>
     <div class="center-content">
       <div class="split-page">
         <div class="info">
@@ -64,7 +65,6 @@
             <span class="tag">Soccer</span>
             <span class="tag">Ping Pong</span>
             <span class="tag">Swimming</span>
-
           </div>
           <div class="info">
             <h2>Location</h2>
