deleted edit-profile-page (workaround)

--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a class="button-submit" href="discovery.html">Discover</a></li>
       <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
+      <li><a class="button-submit" href="messages.html">Messages</a></li>
       <li><a class="button-submit" href="discovery.html">Notifications</a></li>
       <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
