--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a class="button-submit" href="discovery.html">Discover</a></li>
       <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
+      <li><a class="button-submit" href="messages.html">Messages</a></li>
       <li><a class="button-submit" href="discovery.html">Notifications</a></li>
       <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
@@ -24,7 +25,6 @@
     </div>
     <div class="center-content">
       <div id="discover" class="button-submit">Discover</div>
-      <div id="edit-profile" class="button-submit">Edit Profile</div>
     </div>
     <div>
     <div class="center-content">
