attempt @ editting profile

--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -29,32 +29,24 @@
     <div>
     <div class="center-content">
       <div class="split-page">
-        <div class="info">
-          <h2>Description</h2>
-          <div>
-            <p>
-              Hello, my name is Elton and I'm a recent graduate who's looking to
-              share my knowledge of programming. I mainly focus primarily on
-              full stack web development, but have dwelled into mobile development
-              a bit. My rates are $15/hr, which is a big steal compared to other
-              mentors in coding!
-            </p>
+        <div id="description" class="info">
+          <h2>Description (<span class="edit">Edit</span>)</h2>
+          <div id="edit-description">
+            <p id="description-text">Hello, my name is Elton and I'm a recent graduate who's looking to share my knowledge of programming. I mainly focus primarily on full stack web development, but have dwelled into mobile development a bit. My rates are $15/hr, which is a big steal compared to other mentors in coding!</p>
           </div>
         </div>
-        <div class="info">
-          <h2>Education</h2>
-          <div>
-            <h2>University of California, Irvine -> Expected 2019</h2>
-            <p>Major: Computer Science w/ a specialization in Networked Systems</p>
-            <p>Minor: Statistics</p>
-            <p>GPA: 3.50</p>
-          </div>
+        <div id="education" class="info">
+          <h2>Education (<span id="edit-education" class="edit">Edit</span>)</h2>
+          <h2>University of California, Irvine -> Expected 2019</h2>
+          <p>Major: Computer Science w/ a specialization in Networked Systems</p>
+          <p>Minor: Statistics</p>
+          <p>GPA: 3.50</p>
         </div>
       </div>
       <div class="center-content">
         <div class="split-page">
-          <div class="info">
-            <h2>Tags</h2>
+          <div id="tags" class="info">
+            <h2>Tags (<span id="edit-tags" class="edit">Edit</span>)</h2>
             <span class="tag">Basketball</span>
             <span class="tag">Hiking</span>
             <span class="tag">Coding</span>
@@ -66,11 +58,11 @@
             <span class="tag">Ping Pong</span>
             <span class="tag">Swimming</span>
           </div>
-          <div class="info">
-            <h2>Location</h2>
-            <p>Hometown located in Alhambra, CA 91803</p>
-            <p>Lived in Millbrae, CA 94030</p>
-            <p>Currently located in Irvine, CA 92612</p>
+          <div id="location" class="info">
+            <h2>Location (<span id="edit-location" class="edit">Edit</span>)</h2>
+            <p>Hometown: Alhambra, CA 91803</p>
+            <p>Past: Millbrae, CA 94030</p>
+            <p>Current: Irvine, CA 92612</p>
           </div>
         </div>
       </div>
