--- a/src/html/signup-login-page.html
+++ b/src/html/signup-login-page.html
@@ -7,11 +7,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/signup-login-page.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Didact+Gothic" rel="stylesheet">
   </head>
 
   <body>
     <div class="center-content">
-      <h2>Minder - Find a Mentor!</h2>
+      <h2>Minder</h2>
     </div>
     <div class="center-content">
       <div>
