--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/profile.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
 
   <body>
@@ -46,9 +46,9 @@
           <h2>Education</h2>
           <div>
             <h2>University of California, Irvine -> Graduated 2017</h2>
-            <p>Major: Economics</p>
-            <p>Minor: Accounting</p>
-            <p>GPA: 3.40</p>
+            <p><strong>Major: </strong>Economics</p>
+            <p><strong>Minor: </strong>Accounting</p>
+            <p><strong>GPA: </strong>3.40</p>
           </div>
         </div>
       </div>
@@ -66,9 +66,9 @@
           </div>
           <div class="info">
             <h2>Location</h2>
-            <p>Hometown located in La Habra, CA 90683</p>
-            <p>Lived in Irvine, CA 92612</p>
-            <p>Currently located in La Habra, CA 90683</p>
+            <p><strong>Hometown: </strong>La Habra, CA 90683</p>
+            <p><strong>Past: </strong>Irvine, CA 92612</p>
+            <p><strong>Current: </strong>La Habra, CA 90683</p>
           </div>
         </div>
       </div>
