--- a/src/html/discovery.html
+++ b/src/html/discovery.html
@@ -8,6 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/discovery.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
   <body>
     <ul>
