--- a/src/html/self-profile.html
+++ b/src/html/self-profile.html
@@ -8,10 +8,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../styles/profile.css">
     <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
 
-  <body>
+  <body id="page-container">
     <ul>
       <li><a class="button-submit" href="discovery.html">Discover</a></li>
       <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
@@ -29,40 +29,33 @@
     <div>
     <div class="center-content">
       <div class="split-page">
-        <div id="description" class="info">
-          <h2>Description (<span class="edit">Edit</span>)</h2>
-          <div id="edit-description">
+        <div class="info">
+          <h2 id="ec-description">Description <span id="edit-description" class="edit">(Edit)</span></h2>
+          <div id="description-text-container">
             <p id="description-text">Hello, my name is Elton and I'm a recent graduate who's looking to share my knowledge of programming. I mainly focus primarily on full stack web development, but have dwelled into mobile development a bit. My rates are $15/hr, which is a big steal compared to other mentors in coding!</p>
           </div>
         </div>
         <div id="education" class="info">
-          <h2>Education (<span id="edit-education" class="edit">Edit</span>)</h2>
-          <h2>University of California, Irvine -> Expected 2019</h2>
-          <p>Major: Computer Science w/ a specialization in Networked Systems</p>
-          <p>Minor: Statistics</p>
-          <p>GPA: 3.50</p>
+          <h2 id="ec-education">Education <span id="edit-education" class="edit">(Edit)</span></h2>
+          <h2 id="edit-school"></strong>School: </strong><span id="school">University of California, Irvine -> Expected 2019</span></h2>
+          <p id="edit-major"><strong>Major: </strong><span id="major">Computer Science w/ a specialization in Networked Systems</span></p>
+          <p id="edit-minor"><strong>Minor: </strong><span id="minor">Statistics</span></p>
+          <p id="edit-gpa"><strong>GPA: </strong><span id="gpa">3.50</span></p>
+
         </div>
       </div>
       <div class="center-content">
         <div class="split-page">
           <div id="tags" class="info">
-            <h2>Tags (<span id="edit-tags" class="edit">Edit</span>)</h2>
-            <span class="tag">Basketball</span>
-            <span class="tag">Hiking</span>
-            <span class="tag">Coding</span>
-            <span class="tag">Computers</span>
-            <span class="tag">Cooking</span>
-            <span class="tag">Singing</span>
-            <span class="tag">Kungfu</span>
-            <span class="tag">Soccer</span>
-            <span class="tag">Ping Pong</span>
-            <span class="tag">Swimming</span>
+            <h2 id="ec-tags">Tags <span id="edit-tags" class="edit">(Edit)</span></h2>
+
+
           </div>
           <div id="location" class="info">
-            <h2>Location (<span id="edit-location" class="edit">Edit</span>)</h2>
-            <p>Hometown: Alhambra, CA 91803</p>
-            <p>Past: Millbrae, CA 94030</p>
-            <p>Current: Irvine, CA 92612</p>
+            <h2 id="ec-location">Location <span id="edit-location" class="edit">(Edit)</span></h2>
+            <p id="edit-hometown"><strong>Hometown: </strong><span id="hometown">Alhambra, CA 91803</span></p>
+            <p id="edit-past"><strong>Past: </strong><span id="past">Millbrae, CA 94030</span></p>
+            <p id="edit-current"><strong>Current: </strong><span id="current">Irvine, CA 92612</span></p>
           </div>
         </div>
       </div>
