--- a/src/html/user-profile.html
+++ b/src/html/user-profile.html
@@ -19,7 +19,7 @@
       <li><a class="button-submit" href="discovery.html">Notifications</a></li>
       <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
     </ul>
-    <image class="profile-picture" src="../assets/user-profile-pic.jpg" />
+    <image id="profile-picture" src="../assets/user-profile-pic.jpg" />
     <div class="center-content">
       <h1>Sonia Xu</h1>
     </div>
