pending invite design

--- a/src/html/discovery.html
+++ b/src/html/discovery.html
@@ -27,27 +27,27 @@
             <h2>Locals</h2>
           <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
@@ -57,27 +57,27 @@
             <h2>Similar Tags</h2>
           <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
@@ -87,27 +87,27 @@
             <h2>Random</h2>
           <div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
