--- a/src/html/connect.html
+++ b/src/html/connect.html
@@ -32,31 +32,44 @@
     <div class="center-content">
       <div>
           <h2>Pending Invites</h2>
-          <div>
+          <div id="pending-invites">
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
+              <div class="center-content">
+                <div class="button-submit cancel-invite">Cancel</div>
+              </div>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
+              <div class="center-content">
+                <div class="button-submit cancel-invite">Cancel</div>
+              </div>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
+              <div class="center-content">
+                <div class="button-submit cancel-invite">Cancel</div>
+              </div>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
+              <div class="center-content">
+                <div class="button-submit cancel-invite">Cancel</div>
+              </div>
             </div>
             <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
+              <image class="profile-image pending-invite" src="../assets/sonia.jpg">
               <p>Sonia Xu</p>
+              <div class="center-content">
+                <div class="button-submit cancel-invite">Cancel</div>
+              </div>
             </div>
-            <div class="profile">
-              <image class="profile-image" src="../assets/user-profile-pic.jpg">
-              <p>Sonia Xu</p>
-            </div>
+
+
         </div>
       </div>
     </div>
